Добавляет разметку моб версия

--- a/source/form.html
+++ b/source/form.html
@@ -14,7 +14,7 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list nav-list">
             <li class="nav-list__item">
-              <a href="#">Каталог товаров</a>
+              <a href="catalo.html">Каталог товаров</a>
             </li>
             <li class="nav-list__item">
               <a href="#">Вязание на заказ</a>
