--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <header class="main-header">
-      <a class="main-header__logo" href="index.html">
-        <img class="main-header__logo" src="#" width="86" height="35" alt="Mishka">
+      <a class="main-header__logo-link" href="index.html">
+        <img class="main-header__logo-image" src="#" width="86" height="35" alt="Mishka">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
@@ -35,21 +35,21 @@
       <section class="catalog">
         <h1 class="catalog__title">Каталог товаров</h2>
         <ul class="catalog__list">
-          <li class="catalog__item">
+          <li class="catalog__item product">
             <a class="catalog__item-image" href="#"><img src="#" width="260" height="195" alt="Зайчик-попрыгайчик"></a>
             <a class="catalog__item-title" href="#"><b >Зайчик-попрыгайчик</b></a>
             <p class="catalog__item-description">Рост 30 см, вес 200 г</p>
             <b class="catalog__item-price">1 200 руб.</b>
             <a class="catalog__cart" href="#">Добавить в корзину</a>
           </li>
-          <li class="catalog__item">
+          <li class="catalog__item product">
             <a class="catalog__item-image" href="#"><img src="#" width="260" height="195" alt="Корзинка для белья"></a>
             <a class="catalog__item-title" href="#"><b >Корзинка для белья</b></a>
             <p class="catalog__item-description">Диаметр 15 см, высота 10 см</p>
             <b class="catalog__item-price">690 руб.</b>
             <a class="catalog__cart" href="#">Добавить в корзину</a>
           </li>
-          <li class="catalog__item">
+          <li class="catalog__item product">
             <a class="catalog__item-image" href="#"><img src="#" width="260" height="195" alt="Большая корзинка для игрушек"></a>
             <a class="catalog__item-title" href="#"><b >Большая корзинка для игрушек</b></a>
             <p class="catalog__item-description">Диаметр 30 см, высота 30 см</p>
@@ -62,7 +62,7 @@
         <h2 class="production__title">Процесс производства</h2>
         <img class="production__video" src="#" width="260" height="150" alt="Процесс производства">
         <p class="production__intro">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
-        <button class="production__make-order button" type="button">Сделать заказ</button>
+        <a class="production__make-order button" href="#">Сделать заказ</a>
       </section>
     </main>
     <footer class="page-footer">
@@ -84,15 +84,16 @@
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
       </div>
     </footer>
-    <div class="modal">
+    <form class="modal" action="https://echo.htmlacademy.ru" method="get">
       <h2 class="modal__title">Добавить в корзину</h2>
-      <p class="modal__choose">Выберите размер:</p>
-      <ul class="modal__sizes">
-        <a class="modal__size" href="#"><li>s</li></a>
-        <a class="modal__size" href="#"><li>m</li></a>
-        <a class="modal__size" href="#"><li>l</li></a>
-      </ul>
-      <button class="modal__add-product button" type="button">Добавить</button>
-    </div>
+      <p class="modal__choose">Выберите размер:</p>      
+      <input type="checkbox" id="s">
+      <label for="s">S</label>
+      <input type="checkbox" id="m">
+      <label for="s">M</label>
+      <input type="checkbox" id="l">
+      <label for="s">L</label>
+      <input class="form__submit button" type="submit" value="Добавить">
+    </form>
   </body>
 </html>
