--- a/source/form.html
+++ b/source/form.html
@@ -14,7 +14,7 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list nav-list">
             <li class="nav-list__item">
-              <a href="catalo.html">Каталог товаров</a>
+              <a href="catalog.html">Каталог товаров</a>
             </li>
             <li class="nav-list__item">
               <a href="#">Вязание на заказ</a>
@@ -59,31 +59,32 @@
         </fieldset>
         <fieldset class="personal-data">
           <legend class="personal-data__title">ФИО</legend>
-          <input type="text" id="name" placeholder="Введите ваше имя*">
-          <label for="name">Имя:</label>
+          <label for="name">Имя:
+            <input type="text" id="name" placeholder="Введите ваше имя*">
+          </label>
 
-          <input type="text" id="surname" placeholder="Укажите фамилию*">
-          <label for="surname">Фамилия:</label>
+          <label for="surname">Фамилия:
+            <input type="text" id="surname" placeholder="Укажите фамилию*">
+          </label>
 
-          <input type="text" id="patronymic" placeholder="Отчество, если желаете">
-          <label for="patronymic">Отчество:</label>
+          <label for="patronymic">Отчество:
+            <input type="text" id="patronymic" placeholder="Отчество, если желаете">
+          </label>
         </fieldset>
         <fieldset class="phone">
           <legend class="phone__title">Тел</legend>
           <input type="tel" id="phone" placeholder="+7 ХХХ ХХ ХХ*">
-          <div class="phone__icone">Телефон иконка</div>
         </fieldset>
         <fieldset class="email">
           <legend class="email__title">E-mail</legend>
           <input type="email" id="e-mail" placeholder="Ваш Email*">
-          <div class="email__icone">E-mail иконка</div>
         </fieldset>
         <fieldset class="more">
           <legend class="more__title">Доп</legend>
           <textarea id="more" placeholder="Опишите все ваши пожелания к заказу"></textarea>
         </fieldset>
         <p class="form__clarify">*Поля обязательны для заполнения</p>
-        <input class="form__submit" type="submit" value="Отправить заказ">
+        <input class="form__submit button" type="submit" value="Отправить заказ">
       </form>
     </main>
     <footer class="page-footer">
