--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@
   <body>
     <header class="main-header">
       <a class="main-header__logo">
-        <!-- СУДЯ ПО ТЗ НА ГЛАВНОЙ СТРАНИЦЕ ЛОГОТИП ЭТО НЕ ССЫЛКА -->
+        <!-- ПО ТЗ НА ГЛАВНОЙ СТРАНИЦЕ ЛОГОТИП ЭТО НЕ ССЫЛКА! -->
         <img class="main-header__logo" src="#" width="86" height="35" alt="Mishka">
       </a>
       <nav class="main-nav">
@@ -36,8 +36,8 @@
     <main class="page-main">
       <h1 class="page-main__title">Милые штуки ручной работы для дома</h1>
       <ul class="page-main__menu">
-        <a href="#"><li class="page-main__item">Предметы интерьера</li></a>
-        <a href="#"><li class="page-main__item">Детские игрушки</li></a>
+        <li class="page-main__item"><a href="#">Предметы интерьера</a></li>
+        <li class="page-main__item"><a href="#">Детские игрушки</a></li>
       </ul>
       <section class="products">
         <h2 class="products__title">Вязаные корзинки</h2>
@@ -59,7 +59,7 @@
         </table>
         <img class="products__image" src="#" width="260" height="315" alt="Вязаные корзинки">
         <p class="products__price">Цена: 990 руб.</p>
-        <button class="products__order button" type="button">Заказать</button>
+        <a class="products__order button" href="#">Заказать</a>
       </section>
       <section class="features">
         <h2 class="features__title">Коротко о нас:</h2>
@@ -78,11 +78,11 @@
           <p class="comments__content">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
           <cite class="comments__author">Анастасия Красильникова</cite>
           <p class="comments__author-link">@misssssiskras</p>
-          <div class="comments__toggle">
-            <button class="comments__prev" type="button">Предыдущий отзыв</button>
-            <button class="comments__next" type="button">Следующий отзыв</button>
-          </div>
-          <button class="comments__add-comment button" type="button">Написать</button>
+          <ul class="comments__toggle">
+            <li class="comments__prev"><a href="#">Предыдущий отзыв</a></li>
+            <li class="comments__prev"><a href="#">Следующий отзыв</a></li>
+          </ul>
+          <a class="comments__add-comment button" href="#">Написать</a>
         </section>
       </main>
       <footer class="page-footer">
@@ -99,7 +99,7 @@
             </tr>
           </table>
           <img class="contacts__map" src="#" width="322" height="457" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
-          <button class="contacts__write-us button" type="button">Напишите нам</button>
+          <a class="contacts__write-us button" href="#">Напишите нам</a>
         </section>
         <div class="social">
           <ul class="social__list">
@@ -119,15 +119,16 @@
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
         </div>
       </footer>
-      <div class="modal">
+      <form class="modal" action="https://echo.htmlacademy.ru" method="get">
         <h2 class="modal__title">Добавить в корзину</h2>
-        <p class="modal__choose">Выберите размер:</p>
-        <ul class="modal__sizes">
-          <a class="modal__size" href="#"><li>s</li></a>
-          <a class="modal__size" href="#"><li>m</li></a>
-          <a class="modal__size" href="#"><li>l</li></a>
-        </ul>
-        <button class="modal__add-product button" type="button">Добавить</button>
-      </div>
+        <p class="modal__choose">Выберите размер:</p>      
+        <input type="checkbox" id="s">
+        <label for="s">S</label>
+        <input type="checkbox" id="m">
+        <label for="s">M</label>
+        <input type="checkbox" id="l">
+        <label for="s">L</label>
+        <input class="form__submit button" type="submit" value="Добавить">
+    </form>
     </body>
   </html>
