--- a/source/catalog.html
+++ b/source/catalog.html
@@ -35,26 +35,33 @@
       <section class="catalog">
         <h1 class="catalog__title">Каталог товаров</h2>
         <ul class="catalog__list">
-          <li class="catalog__item product">
-            <a class="catalog__item-image" href="#"><img src="#" width="260" height="195" alt="Зайчик-попрыгайчик"></a>
-            <a class="catalog__item-title" href="#"><b >Зайчик-попрыгайчик</b></a>
-            <p class="catalog__item-description">Рост 30 см, вес 200 г</p>
-            <b class="catalog__item-price">1 200 руб.</b>
-            <a class="catalog__cart" href="#">Добавить в корзину</a>
+          <li class="catalog__item">
+            <article class="product">
+              <!-- Если li как ты написала будет мешать использовать блок товара, то какой смысл его миксовать. Поэтому я в него вставляю артикл с отдельным универсальным классом - или я не так думаю? -->
+              <a class="product__image" href="#"><img src="#" width="260" height="195" alt="Зайчик-попрыгайчик"></a>
+              <a class="product__title" href="#"><b >Зайчик-попрыгайчик</b></a>
+              <p class="product__description">Рост 30 см, вес 200 г</p>
+              <b class="product__price">1 200 руб.</b>
+              <a class="product__cart" href="#">Добавить в корзину</a>
+            </article>
           </li>
-          <li class="catalog__item product">
-            <a class="catalog__item-image" href="#"><img src="#" width="260" height="195" alt="Корзинка для белья"></a>
-            <a class="catalog__item-title" href="#"><b >Корзинка для белья</b></a>
-            <p class="catalog__item-description">Диаметр 15 см, высота 10 см</p>
-            <b class="catalog__item-price">690 руб.</b>
-            <a class="catalog__cart" href="#">Добавить в корзину</a>
+          <li class="catalog__item">
+            <article class="product">
+              <a class="product__image" href="#"><img src="#" width="260" height="195" alt="Корзинка для белья"></a>
+              <a class="product__title" href="#"><b >Корзинка для белья</b></a>
+              <p class="product__description">Диаметр 15 см, высота 10 см</p>
+              <b class="product__price">690 руб.</b>
+              <a class="product__cart" href="#">Добавить в корзину</a>
+            </article>
           </li>
-          <li class="catalog__item product">
-            <a class="catalog__item-image" href="#"><img src="#" width="260" height="195" alt="Большая корзинка для игрушек"></a>
-            <a class="catalog__item-title" href="#"><b >Большая корзинка для игрушек</b></a>
-            <p class="catalog__item-description">Диаметр 30 см, высота 30 см</p>
-            <b class="catalog__item-price">1 500 руб.</b>
-            <a class="catalog__cart" href="#">Добавить в корзину</a>
+          <li class="catalog__item">
+            <article class="product">
+              <a class="product__image" href="#"><img src="#" width="260" height="195" alt="Большая корзинка для игрушек"></a>
+              <a class="product__title" href="#"><b >Большая корзинка для игрушек</b></a>
+              <p class="product__description">Диаметр 30 см, высота 30 см</p>
+              <b class="product__price">1 500 руб.</b>
+              <a class="product__cart" href="#">Добавить в корзину</a>
+            </article>
           </li>
         </ul>
       </section>
@@ -84,16 +91,18 @@
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
       </div>
     </footer>
-    <form class="modal" action="https://echo.htmlacademy.ru" method="get">
-      <h2 class="modal__title">Добавить в корзину</h2>
-      <p class="modal__choose">Выберите размер:</p>
-      <input type="checkbox" id="s">
-      <label for="s">S</label>
-      <input type="checkbox" id="m">
-      <label for="s">M</label>
-      <input type="checkbox" id="l">
-      <label for="s">L</label>
-      <input class="form__submit button" type="submit" value="Добавить">
-    </form>
+    <section class="modal">
+      <form class="modal__form" action="https://echo.htmlacademy.ru" method="get">
+        <h2 class="modal__title">Добавить в корзину</h2>
+        <p class="modal__choose">Выберите размер:</p>
+        <input type="checkbox" id="s">
+        <label for="s">S</label>
+        <input type="checkbox" id="m">
+        <label for="s">M</label>
+        <input type="checkbox" id="l">
+        <label for="s">L</label>
+        <input class="form__submit button" type="submit" value="Добавить">
+      </form>
+    </section>
   </body>
 </html>
