--- a/source/form.html
+++ b/source/form.html
@@ -69,40 +69,39 @@
             <input type="text" id="patronymic" placeholder="Отчество, если желаете">
           </label>
         </fieldset>
-        <fieldset class="phone">
-          <legend class="phone__title">Тел</legend>
+        <fieldset class="contacts">
+          <!-- легенду здесь поставила изначально, так как по макету это выглядит как легенда у предыдущих блоков - мне показалось было бы легче назначить на все легенды одно оформление и вот здесь понимаю что надо еще на все легенды навесить еще и отделный класс для этого унивесальоно оформления или не надо? -->
+          <label for="tel" class="phone__title">Тел</label>
           <input type="tel" id="phone" placeholder="+7 ХХХ ХХ ХХ*">
-        </fieldset>
-        <fieldset class="email">
-          <legend class="email__title">E-mail</legend>
-          <input type="email" id="e-mail" placeholder="Ваш Email*">
-        </fieldset>
-        <fieldset class="more">
-          <legend class="more__title">Доп</legend>
-          <textarea id="more" placeholder="Опишите все ваши пожелания к заказу"></textarea>
-        </fieldset>
-        <p class="form__clarify">*Поля обязательны для заполнения</p>
-        <input class="form__submit button" type="submit" value="Отправить заказ">
-      </form>
-    </main>
-    <footer class="page-footer">
-      <div class="social">
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link" href="#">Instagram</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link" href="#">Facebook</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link" href="#">Tweeter</a>
-          </li>
-        </ul>
-      </div>
-      <div class="copyright">
-        <b class="copyright__text">Разработано</b>
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-      </div>
-    </footer>
-  </body>
-</html>
+          <label for="email" class="email__title">E-mail</lable>
+            <input type="email" id="e-mail" placeholder="Ваш Email*">
+          </fieldset>
+          <fieldset class="more">
+            <lable for="more" class="more__title">Доп</lable>
+            <textarea id="more" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+          </fieldset>
+          <p class="form__clarify">*Поля обязательны для заполнения</p>
+          <input class="form__submit button" type="submit" value="Отправить заказ">
+        </form>
+      </main>
+      <footer class="page-footer">
+        <div class="social">
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link" href="#">Instagram</a>
+            </li>
+            <li class="social__item">
+              <a class="social__link" href="#">Facebook</a>
+            </li>
+            <li class="social__item">
+              <a class="social__link" href="#">Tweeter</a>
+            </li>
+          </ul>
+        </div>
+        <div class="copyright">
+          <b class="copyright__text">Разработано</b>
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+        </div>
+      </footer>
+    </body>
+  </html>
