--- a/source/index.html
+++ b/source/index.html
@@ -71,54 +71,57 @@
           <li class="features__item features__item--gift">Поставляется в подарочной упаковке</li>
         </ul>
       </section>
-      <section class="comments">
+      <section class="comments slider">
         <h2 class="comments__title">Отзывы</h2>
         <blockquote class="comments__item">
+          <!-- Про три отзыва не очень поняла?! - в макете всегод один отзыв ... еще раз пересмотрела макет и нет скрытых отзывов ?! по логике конечно здесь будет несколько отзывов поэтому я добавила секции еще общий класс slider-->
           <p class="comments__content">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
           <cite class="comments__author">Анастасия Красильникова</cite>
           <p class="comments__author-link">@misssssiskras</p>
-          <ul class="comments__toggle">
-            <li class="comments__prev"><a href="#">Предыдущий отзыв</a></li>
-            <li class="comments__prev"><a href="#">Следующий отзыв</a></li>
-          </ul>
+          <p class="comments__toggles slider__toggles">
+            <button class="slider__prev" type="button">Предыдущий отзыв</button>
+            <button class="slider__next" type="button">Следующий отзыв</button>
+          </p>
           <a class="comments__add-comment button" href="#">Написать</a>
-        </section>
-      </main>
-      <footer class="page-footer">
-        <section class="contacts">
-          <h2 class="contacts__title">Контакты</h2>
-          <table class="contacts__data">
-            <tr>
-              <td class="data__name">e-mail:</td>
-              <td class="data__value">info@mimimishkashop.ru</td>
-            </tr>
-            <tr>
-              <td class="data__name">адрес:</td>
-              <td class="data__value">г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</td>
-            </tr>
-          </table>
-          <img class="contacts__map" src="#" width="322" height="457" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
-          <a class="contacts__write-us button" href="#">Напишите нам</a>
-        </section>
-        <div class="social">
-          <ul class="social__list">
-            <li class="social__item">
-              <a class="social__link" href="#">Instagram</a>
-            </li>
-            <li class="social__item">
-              <a class="social__link" href="#">Facebook</a>
-            </li>
-            <li class="social__item">
-              <a class="social__link" href="#">Tweeter</a>
-            </li>
-          </ul>
-        </div>
-        <div class="copyright">
-          <b class="copyright__text">Разработано</b>
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-        </div>
-      </footer>
-      <form class="modal" action="https://echo.htmlacademy.ru" method="get">
+        </blockquote>
+      </section>
+    </main>
+    <footer class="page-footer">
+      <section class="contacts">
+        <h2 class="contacts__title">Контакты</h2>
+        <table class="contacts__data">
+          <tr>
+            <td class="data__name">e-mail:</td>
+            <td class="data__value">info@mimimishkashop.ru</td>
+          </tr>
+          <tr>
+            <td class="data__name">адрес:</td>
+            <td class="data__value">г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</td>
+          </tr>
+        </table>
+        <img class="contacts__map" src="#" width="322" height="457" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
+        <a class="contacts__write-us button" href="#">Напишите нам</a>
+      </section>
+      <div class="social">
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link" href="#">Instagram</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link" href="#">Facebook</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link" href="#">Tweeter</a>
+          </li>
+        </ul>
+      </div>
+      <div class="copyright">
+        <b class="copyright__text">Разработано</b>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+      </div>
+    </footer>
+    <section class="modal">
+      <form class="modal__form" action="https://echo.htmlacademy.ru" method="get">
         <h2 class="modal__title">Добавить в корзину</h2>
         <p class="modal__choose">Выберите размер:</p>
         <input type="checkbox" id="s">
@@ -129,5 +132,6 @@
         <label for="s">L</label>
         <input class="form__submit button" type="submit" value="Добавить">
       </form>
-    </body>
-  </html>
+    </section>
+  </body>
+</html>
