--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Mishka-каталог товаров</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
-      <a class="main-header__logo-link" href="index.html">
+      <a class="main-header__logo" href="index.html">
         <img class="main-header__logo-image" src="#" width="86" height="35" alt="Mishka">
       </a>
       <nav class="main-nav">
@@ -14,18 +15,18 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list nav-list">
             <li class="nav-list__item">
-              <a href="#">Каталог товаров</a>
+              <a class="nav-list__link" href="#">Каталог товаров</a>
             </li>
             <li class="nav-list__item">
-              <a href="form.html">Вязание на заказ</a>
+              <a class="nav-list__link" href="form.html">Вязание на заказ</a>
             </li>
           </ul>
           <ul class="main-nav__list user-list">
             <li class="user-list__item">
-              <a href="#">Поиск по сайту</a>
+              <a class="user-list__link" href="#">Поиск по сайту</a>
             </li>
             <li class="user-list__item">
-              <a href="#">Корзина: пока пуста</a>
+              <a class="user-list__link" href="#">Корзина: пока пуста</a>
             </li>
           </ul>
         </div>
@@ -33,13 +34,13 @@
     </header>
     <main class="page-main">
       <section class="catalog">
-        <h1 class="catalog__title">Каталог товаров</h2>
+        <h1 class="catalog__title page-main__title">Каталог товаров</h1>
         <ul class="catalog__list">
           <li class="catalog__item">
             <article class="product">
               <!-- Если li как ты написала будет мешать использовать блок товара, то какой смысл его миксовать. Поэтому я в него вставляю артикл с отдельным универсальным классом - или я не так думаю? -->
               <a class="product__image" href="#"><img src="#" width="260" height="195" alt="Зайчик-попрыгайчик"></a>
-              <a class="product__title" href="#"><b >Зайчик-попрыгайчик</b></a>
+              <a class="product__link" href="#"><h2 class="product__title">Зайчик-попрыгайчик</h2></a>
               <p class="product__description">Рост 30 см, вес 200 г</p>
               <b class="product__price">1 200 руб.</b>
               <a class="product__cart" href="#">Добавить в корзину</a>
@@ -48,7 +49,7 @@
           <li class="catalog__item">
             <article class="product">
               <a class="product__image" href="#"><img src="#" width="260" height="195" alt="Корзинка для белья"></a>
-              <a class="product__title" href="#"><b >Корзинка для белья</b></a>
+              <a class="product__link" href="#"><h2 class="product__title">Корзинка для белья</h2></a>
               <p class="product__description">Диаметр 15 см, высота 10 см</p>
               <b class="product__price">690 руб.</b>
               <a class="product__cart" href="#">Добавить в корзину</a>
@@ -57,7 +58,7 @@
           <li class="catalog__item">
             <article class="product">
               <a class="product__image" href="#"><img src="#" width="260" height="195" alt="Большая корзинка для игрушек"></a>
-              <a class="product__title" href="#"><b >Большая корзинка для игрушек</b></a>
+              <a class="product__link" href="#"><h2 class="product__title">Большая корзинка для игрушек</h2></a>
               <p class="product__description">Диаметр 30 см, высота 30 см</p>
               <b class="product__price">1 500 руб.</b>
               <a class="product__cart" href="#">Добавить в корзину</a>
@@ -68,8 +69,10 @@
       <section class="production">
         <h2 class="production__title">Процесс производства</h2>
         <img class="production__video" src="#" width="260" height="150" alt="Процесс производства">
+        <img class="production__play-button" scr="#" width="101" height="77" alt="Кнопка Play">
         <p class="production__intro">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
         <a class="production__make-order button" href="#">Сделать заказ</a>
+
       </section>
     </main>
     <footer class="page-footer">
