--- a/source/form.html
+++ b/source/form.html
@@ -3,47 +3,48 @@
   <head>
     <meta charset="utf-8">
     <title>Mishka-форма заказа</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
       <a class="main-header__logo" href="index.html">
-        <img class="main-header__logo" src="#" width="86" height="35" alt="Mishka">
+        <img class="main-header__logo-image" src="#" width="86" height="35" alt="Mishka">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list nav-list">
             <li class="nav-list__item">
-              <a href="catalog.html">Каталог товаров</a>
+              <a class="nav-list__link" href="catalog.html">Каталог товаров</a>
             </li>
             <li class="nav-list__item">
-              <a href="#">Вязание на заказ</a>
+              <a class="nav-list__link" href="#">Вязание на заказ</a>
             </li>
           </ul>
           <ul class="main-nav__list user-list">
             <li class="user-list__item">
-              <a href="#">Поиск по сайту</a>
+              <a class="user-list__link" href="#">Поиск по сайту</a>
             </li>
             <li class="user-list__item">
-              <a href="#">Корзина: пока пуста</a>
+              <a class="user-list__link" href="#">Корзина: пока пуста</a>
             </li>
           </ul>
         </div>
       </nav>
     </header>
-    <main class="page-main">
-      <h1 class="page-main__title">Вязание на заказ</h1>
-      <p class="page-main__description">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
+    <main class="page-main form-page">
+      <h1 class="form-page__title page-main__title">Вязание на заказ</h1>
+      <p class="form-page__description">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
       <form class="form" action="https://echo.htmlacademy.ru" method="get">
         <fieldset class="type">
-          <legend class="type__title">Тип</legend>
+          <legend class="type__title form__title">Тип</legend>
           <input type="radio" id="accessory" checked>
           <label for="accessory">Аксессуар для интерьера</label>
           <input type="radio" id="toy">
           <label for="accessory">Детская игрушка</label>
         </fieldset>
         <fieldset class="color">
-          <legend class="color__title">Цвет</legend>
+          <legend class="color__title form__title">Цвет</legend>
           <input type="checkbox" id="white" checked>
           <label for="white">Белый</label>
           <input type="checkbox" id="grey" checked>
@@ -58,7 +59,7 @@
           <label for="orange">Оранжевый</label>
         </fieldset>
         <fieldset class="personal-data">
-          <legend class="personal-data__title">ФИО</legend>
+          <legend class="personal-data__title form__title">ФИО</legend>
           <label for="name">Имя:
             <input type="text" id="name" placeholder="Введите ваше имя*">
           </label>
@@ -71,17 +72,17 @@
         </fieldset>
         <fieldset class="contacts">
           <!-- легенду здесь поставила изначально, так как по макету это выглядит как легенда у предыдущих блоков - мне показалось было бы легче назначить на все легенды одно оформление и вот здесь понимаю что надо еще на все легенды навесить еще и отделный класс для этого унивесальоно оформления или не надо? -->
-          <label for="tel" class="phone__title">Тел</label>
+          <label for="tel" class="phone__title form__title">Тел</label>
           <input type="tel" id="phone" placeholder="+7 ХХХ ХХ ХХ*">
-          <label for="email" class="email__title">E-mail</lable>
+          <label for="email" class="email__title form__title">E-mail</lable>
             <input type="email" id="e-mail" placeholder="Ваш Email*">
           </fieldset>
           <fieldset class="more">
-            <lable for="more" class="more__title">Доп</lable>
+            <lable for="more" class="more__title form__title">Доп</lable>
             <textarea id="more" placeholder="Опишите все ваши пожелания к заказу"></textarea>
           </fieldset>
           <p class="form__clarify">*Поля обязательны для заполнения</p>
-          <input class="form__submit button" type="submit" value="Отправить заказ">
+          <input class="form__submit form__submit--form button" type="submit" value="Отправить заказ">
         </form>
       </main>
       <footer class="page-footer">
