--- a/source/index.html
+++ b/source/index.html
@@ -3,30 +3,33 @@
   <head>
     <meta charset="utf-8">
     <title>Mishka</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
       <a class="main-header__logo">
         <!-- ПО ТЗ НА ГЛАВНОЙ СТРАНИЦЕ ЛОГОТИП ЭТО НЕ ССЫЛКА! -->
-        <img class="main-header__logo" src="#" width="86" height="35" alt="Mishka">
+        <img class="main-header__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Mishka">
+<!-- src потом изменю -->
+
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list nav-list">
             <li class="nav-list__item">
-              <a href="catalog.html">Каталог товаров</a>
+              <a class="nav-list__link" href="catalog.html">Каталог товаров</a>
             </li>
             <li class="nav-list__item">
-              <a href="form.html">Вязание на заказ</a>
+              <a class="nav-list__link" href="form.html">Вязание на заказ</a>
             </li>
           </ul>
           <ul class="main-nav__list user-list">
             <li class="user-list__item">
-              <a href="#">Поиск по сайту</a>
+              <a class="user-list__link" href="#">Поиск по сайту</a>
             </li>
             <li class="user-list__item">
-              <a href="#">Корзина: пока пуста</a>
+              <a class="user-list__link" href="#">Корзина: пока пуста</a>
             </li>
           </ul>
         </div>
@@ -34,9 +37,11 @@
     </header>
     <main class="page-main">
       <h1 class="page-main__title">Милые штуки ручной работы для дома</h1>
-      <ul class="page-main__menu">
-        <li class="page-main__item"><a href="#">Предметы интерьера</a></li>
-        <li class="page-main__item"><a href="#">Детские игрушки</a></li>
+      <ul class="page-main__menu main-menu">
+        <li class="main-menu__item">
+          <a class="main-menu__link" href="#">Предметы интерьера</a></li>
+        <li class="main-menu__item main-menu__item--bg-color">
+          <a class="main-menu__link" href="#">Детские игрушки</a></li>
       </ul>
       <section class="products">
         <h2 class="products__title">Вязаные корзинки</h2>
@@ -76,7 +81,7 @@
         <blockquote class="comments__item">
           <!-- Про три отзыва не очень поняла?! - в макете всегод один отзыв ... еще раз пересмотрела макет и нет скрытых отзывов ?! по логике конечно здесь будет несколько отзывов поэтому я добавила секции еще общий класс slider-->
           <p class="comments__content">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
-          <cite class="comments__author">Анастасия Красильникова</cite>
+          <p class="comments__author">Анастасия Красильникова</p> <!-- cite -->
           <p class="comments__author-link">@misssssiskras</p>
           <p class="comments__toggles slider__toggles">
             <button class="slider__prev" type="button">Предыдущий отзыв</button>
