--- a/source/form.html
+++ b/source/form.html
@@ -36,14 +36,14 @@
       <h1 class="form-page__title page-main__title">Вязание на заказ</h1>
       <p class="form-page__description">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
       <form class="form" action="https://echo.htmlacademy.ru" method="get">
-        <fieldset class="type">
+        <fieldset class="form__type type">
           <legend class="type__title form__title">Тип</legend>
           <input type="radio" id="accessory" checked>
           <label for="accessory">Аксессуар для интерьера</label>
           <input type="radio" id="toy">
           <label for="accessory">Детская игрушка</label>
         </fieldset>
-        <fieldset class="color">
+        <fieldset class="form__color color">
           <legend class="color__title form__title">Цвет</legend>
           <input type="checkbox" id="white" checked>
           <label for="white">Белый</label>
@@ -58,28 +58,28 @@
           <input type="checkbox" id="orange">
           <label for="orange">Оранжевый</label>
         </fieldset>
-        <fieldset class="personal-data">
+        <fieldset class="form__personal-data personal-data">
           <legend class="personal-data__title form__title">ФИО</legend>
           <label for="name">Имя:
-            <input type="text" id="name" placeholder="Введите ваше имя*">
+            <input class="personal-data__name" type="text" id="name" placeholder="Введите ваше имя*">
           </label>
           <label for="surname">Фамилия:
-            <input type="text" id="surname" placeholder="Укажите фамилию*">
+            <input class="personal-data__surname" type="text" id="surname" placeholder="Укажите фамилию*">
           </label>
           <label for="patronymic">Отчество:
-            <input type="text" id="patronymic" placeholder="Отчество, если желаете">
+            <input class="personal-data__patronymic" type="text" id="patronymic" placeholder="Отчество, если желаете">
           </label>
         </fieldset>
-        <fieldset class="contacts">
+        <fieldset class="form__contact contact">
           <!-- легенду здесь поставила изначально, так как по макету это выглядит как легенда у предыдущих блоков - мне показалось было бы легче назначить на все легенды одно оформление и вот здесь понимаю что надо еще на все легенды навесить еще и отделный класс для этого унивесальоно оформления или не надо? -->
-          <label for="tel" class="phone__title form__title">Тел</label>
-          <input type="tel" id="phone" placeholder="+7 ХХХ ХХ ХХ*">
-          <label for="email" class="email__title form__title">E-mail</lable>
-            <input type="email" id="e-mail" placeholder="Ваш Email*">
+          <label for="tel" class="contact__title form__title">Тел</label>
+          <input class="contact__phone" type="tel" id="phone" placeholder="+7 ХХХ ХХ ХХ*">
+          <label for="email" class="contact__title form__title">E-mail</lable>
+            <input class="contact__email" type="email" id="e-mail" placeholder="Ваш Email*">
           </fieldset>
-          <fieldset class="more">
+          <fieldset class="form__more more">
             <lable for="more" class="more__title form__title">Доп</lable>
-            <textarea id="more" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+            <textarea class="more__info" id="more" placeholder="Опишите все ваши пожелания к заказу"></textarea>
           </fieldset>
           <p class="form__clarify">*Поля обязательны для заполнения</p>
           <input class="form__submit form__submit--form button" type="submit" value="Отправить заказ">
