--- a/source/catalog.html
+++ b/source/catalog.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <header class="main-header">
+      <div class="main-header__wrapper">
       <a class="main-header__logo" href="index.html">
         <img class="main-header__logo-image" src="#" width="86" height="35" alt="Mishka">
       </a>
@@ -31,67 +32,86 @@
           </ul>
         </div>
       </nav>
+    </div>
     </header>
     <main class="page-main">
       <section class="catalog">
-        <h1 class="catalog__title page-main__title">Каталог товаров</h1>
+        <div class="title__wrap">
+          <div class="catalog__wrapper">
+            <h1 class="catalog__title page-main__title">Каталог товаров</h1>
+          </div>
+        </div>
         <ul class="catalog__list">
-          <li class="catalog__item">
-            <article class="product">
-              <!-- Если li как ты написала будет мешать использовать блок товара, то какой смысл его миксовать. Поэтому я в него вставляю артикл с отдельным универсальным классом - или я не так думаю? -->
-              <a class="product__image" href="#"><img src="#" width="260" height="195" alt="Зайчик-попрыгайчик"></a>
-              <a class="product__link" href="#"><h2 class="product__title">Зайчик-попрыгайчик</h2></a>
-              <p class="product__description">Рост 30 см, вес 200 г</p>
-              <b class="product__price">1 200 руб.</b>
-              <a class="product__cart" href="#">Добавить в корзину</a>
-            </article>
-          </li>
-          <li class="catalog__item">
-            <article class="product">
-              <a class="product__image" href="#"><img src="#" width="260" height="195" alt="Корзинка для белья"></a>
-              <a class="product__link" href="#"><h2 class="product__title">Корзинка для белья</h2></a>
-              <p class="product__description">Диаметр 15 см, высота 10 см</p>
-              <b class="product__price">690 руб.</b>
-              <a class="product__cart" href="#">Добавить в корзину</a>
-            </article>
-          </li>
-          <li class="catalog__item">
-            <article class="product">
-              <a class="product__image" href="#"><img src="#" width="260" height="195" alt="Большая корзинка для игрушек"></a>
-              <a class="product__link" href="#"><h2 class="product__title">Большая корзинка для игрушек</h2></a>
-              <p class="product__description">Диаметр 30 см, высота 30 см</p>
-              <b class="product__price">1 500 руб.</b>
-              <a class="product__cart" href="#">Добавить в корзину</a>
-            </article>
-          </li>
+          <div class="catalog__wrapper">
+            <li class="catalog__item">
+              <article class="product">
+                <a class="product__image" href="#"><img src="#" width="260" height="195" alt="Зайчик-попрыгайчик"></a>
+                <div class="product__wrap--tablet">
+                  <a class="product__link" href="#"><h2 class="product__title">Зайчик-попрыгайчик</h2></a>
+                  <p class="product__description">Рост 30 см, вес 200 г</p>
+                  <b class="product__price">1 200 руб.</b>
+                  <a class="product__cart" href="#">Добавить в корзину</a>
+                </div>
+              </article>
+            </li>
+            <li class="catalog__item">
+              <article class="product">
+                <a class="product__image" href="#"><img src="#" width="260" height="195" alt="Корзинка для белья"></a>
+                <div class="product__wrap--tablet">
+                  <a class="product__link" href="#"><h2 class="product__title">Корзинка для белья</h2></a>
+                  <p class="product__description">Диаметр 15 см, высота 10 см</p>
+                  <b class="product__price">690 руб.</b>
+                  <a class="product__cart" href="#">Добавить в корзину</a>
+                </div>
+              </article>
+            </li>
+            <li class="catalog__item">
+              <article class="product">
+                <a class="product__image" href="#"><img src="#" width="260" height="195" alt="Большая корзинка для игрушек"></a>
+                <div class="product__wrap--tablet">
+                  <a class="product__link" href="#"><h2 class="product__title">Большая корзинка для игрушек</h2></a>
+                  <p class="product__description">Диаметр 30 см, высота 30 см</p>
+                  <b class="product__price">1 500 руб.</b>
+                  <a class="product__cart" href="#">Добавить в корзину</a>
+                </div>
+              </article>
+            </li>
+          </div>
         </ul>
       </section>
-      <section class="production">
-        <h2 class="production__title">Процесс производства</h2>
-        <img class="production__video" src="#" width="260" height="150" alt="Процесс производства">
-        <img class="production__play-button" scr="#" width="101" height="77" alt="Кнопка Play">
-        <p class="production__intro">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
-        <a class="production__make-order button" href="#">Сделать заказ</a>
-
-      </section>
+      <div class="page-main__wrapper">
+        <section class="production">
+          <h2 class="production__title">Процесс производства</h2>
+          <img class="production__video" src="#" width="260" height="150" alt="Процесс производства">
+          <img class="production__play-button" scr="#" width="101" height="77" alt="Кнопка Play">
+          <div class="production__wrapper--desktop">
+          <p class="production__intro">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
+          <a class="production__make-order button" href="#">Сделать заказ</a>
+        </div>
+        </section>
+      </div>
     </main>
     <footer class="page-footer">
-      <div class="social">
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link" href="#">Instagram</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link" href="#">Facebook</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link" href="#">Tweeter</a>
-          </li>
-        </ul>
-      </div>
-      <div class="copyright">
-        <b class="copyright__text">Разработано</b>
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+      <div class="footer__wrap">
+        <div class="footer__wrap--tablet">
+          <div class="social">
+            <ul class="social__list">
+              <li class="social__item">
+                <a class="social__link" href="#">Instagram</a>
+              </li>
+              <li class="social__item">
+                <a class="social__link" href="#">Facebook</a>
+              </li>
+              <li class="social__item">
+                <a class="social__link" href="#">Tweeter</a>
+              </li>
+            </ul>
+          </div>
+          <div class="copyright">
+            <b class="copyright__text">Разработано</b>
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+          </div>
+        </div>
       </div>
     </footer>
     <section class="modal">
