--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,45 +9,43 @@
   <body>
     <header class="main-header">
       <div class="main-header__wrapper">
-      <a class="main-header__logo" href="index.html">
-        <img class="main-header__logo-image" src="#" width="86" height="35" alt="Mishka">
-      </a>
-      <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">Открыть меню</button>
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__list nav-list">
-            <li class="nav-list__item">
-              <a class="nav-list__link" href="#">Каталог товаров</a>
-            </li>
-            <li class="nav-list__item">
-              <a class="nav-list__link" href="form.html">Вязание на заказ</a>
-            </li>
-          </ul>
-          <ul class="main-nav__list user-list">
-            <li class="user-list__item">
-              <a class="user-list__link" href="#">Поиск по сайту</a>
-            </li>
-            <li class="user-list__item">
-              <a class="user-list__link" href="#">Корзина: пока пуста</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </div>
+        <a class="main-header__logo" href="index.html">
+          <img class="main-header__logo-image" src="#" width="86" height="35" alt="Mishka">
+        </a>
+        <nav class="main-nav">
+          <button class="main-nav__toggle" type="button">Открыть меню</button>
+          <div class="main-nav__wrapper">
+            <ul class="main-nav__list nav-list">
+              <li class="nav-list__item">
+                <a class="nav-list__link" href="#">Каталог товаров</a>
+              </li>
+              <li class="nav-list__item">
+                <a class="nav-list__link" href="form.html">Вязание на заказ</a>
+              </li>
+            </ul>
+            <ul class="main-nav__list user-list">
+              <li class="user-list__item user-list__item--search">
+                <a class="user-list__link" href="#">Поиск по сайту</a>
+              </li>
+              <li class="user-list__item user-list__item--cart">
+                <a class="user-list__link" href="#">Корзина: пока пуста</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
     </header>
     <main class="page-main">
       <section class="catalog">
-        <div class="title__wrap">
-          <div class="catalog__wrapper">
-            <h1 class="catalog__title page-main__title">Каталог товаров</h1>
-          </div>
+        <div class="catalog__title-bg">
+          <h1 class="catalog__title page-main__title">Каталог товаров</h1>
         </div>
         <ul class="catalog__list">
           <div class="catalog__wrapper">
             <li class="catalog__item">
               <article class="product">
                 <a class="product__image" href="#"><img src="#" width="260" height="195" alt="Зайчик-попрыгайчик"></a>
-                <div class="product__wrap--tablet">
+                <div class="product__data">
                   <a class="product__link" href="#"><h2 class="product__title">Зайчик-попрыгайчик</h2></a>
                   <p class="product__description">Рост 30 см, вес 200 г</p>
                   <b class="product__price">1 200 руб.</b>
@@ -58,7 +56,7 @@
             <li class="catalog__item">
               <article class="product">
                 <a class="product__image" href="#"><img src="#" width="260" height="195" alt="Корзинка для белья"></a>
-                <div class="product__wrap--tablet">
+                <div class="product__data">
                   <a class="product__link" href="#"><h2 class="product__title">Корзинка для белья</h2></a>
                   <p class="product__description">Диаметр 15 см, высота 10 см</p>
                   <b class="product__price">690 руб.</b>
@@ -69,7 +67,7 @@
             <li class="catalog__item">
               <article class="product">
                 <a class="product__image" href="#"><img src="#" width="260" height="195" alt="Большая корзинка для игрушек"></a>
-                <div class="product__wrap--tablet">
+                <div class="product__data">
                   <a class="product__link" href="#"><h2 class="product__title">Большая корзинка для игрушек</h2></a>
                   <p class="product__description">Диаметр 30 см, высота 30 см</p>
                   <b class="product__price">1 500 руб.</b>
@@ -83,18 +81,20 @@
       <div class="page-main__wrapper">
         <section class="production">
           <h2 class="production__title">Процесс производства</h2>
-          <img class="production__video" src="#" width="260" height="150" alt="Процесс производства">
-          <img class="production__play-button" scr="#" width="101" height="77" alt="Кнопка Play">
-          <div class="production__wrapper--desktop">
-          <p class="production__intro">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
-          <a class="production__make-order button" href="#">Сделать заказ</a>
-        </div>
+          <div class="production__videoplayer">
+            <img class="production__video" src="#" width="260" height="150" alt="Процесс производства">
+            <img class="production__play-button" scr="#" width="101" height="77" alt="Кнопка Play">
+          </div>
+          <div class="production__intro-wrapper">
+            <p class="production__intro">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
+            <a class="production__make-order button" href="#">Сделать заказ</a>
+          </div>
         </section>
       </div>
     </main>
     <footer class="page-footer">
-      <div class="footer__wrap">
-        <div class="footer__wrap--tablet">
+      <section class="social-copyright">
+        <div class="social-copyright__wrapper">
           <div class="social">
             <ul class="social__list">
               <li class="social__item">
@@ -113,7 +113,7 @@
             <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
           </div>
         </div>
-      </div>
+      </section>
     </footer>
     <section class="modal">
       <form class="modal__form" action="https://echo.htmlacademy.ru" method="get">
