--- a/source/index.html
+++ b/source/index.html
@@ -25,10 +25,10 @@
               </li>
             </ul>
             <ul class="main-nav__list user-list">
-              <li class="user-list__item user-list__item--search-tablet">
+              <li class="user-list__item user-list__item--search">
                 <a class="user-list__link" href="#">Поиск по сайту</a>
               </li>
-              <li class="user-list__item user-list__item--cart-tablet">
+              <li class="user-list__item user-list__item--cart">
                 <a class="user-list__link" href="#">Корзина: пока пуста</a>
               </li>
             </ul>
@@ -37,14 +37,16 @@
       </div>
     </header>
     <main class="page-main">
-      <div class="page-main__wrapper">
+      <div class="page-main__title-wrapper">
         <h1 class="page-main__title">Милые штуки ручной работы для дома</h1>
-        <ul class="page-main__menu main-menu">
-          <li class="main-menu__item">
-            <a class="main-menu__link" href="#">Предметы интерьера</a></li>
-            <li class="main-menu__item main-menu__item--bg-color">
-              <a class="main-menu__link" href="#">Детские игрушки</a></li>
-            </ul>
+      </div>
+      <ul class="page-main__menu main-menu">
+        <li class="main-menu__item">
+          <a class="main-menu__link" href="#">Предметы интерьера</a></li>
+          <li class="main-menu__item main-menu__item--bg-color">
+            <a class="main-menu__link" href="#">Детские игрушки</a></li>
+          </ul>
+          <div class="page-main__wrapper">
             <section class="products">
               <h2 class="products__title">Вязаные корзинки</h2>
               <b class="products__hit">Товар недели</b>
@@ -100,28 +102,19 @@
           <section class="contacts">
             <div class="contacts__wrapper">
               <h2 class="contacts__title">Контакты</h2>
-              <table class="contacts__data">
-                <tr>
-                  <td class="data__name">e-mail:</td>
-                  <td class="data__value">info@mimimishkashop.ru</td>
-                </tr>
-                <tr>
-                  <td class="data__name">адрес:</td>
-                  <td class="data__value">г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</td>
-                </tr>
-              </table>
-              <table class="contacts__data--tablet">
-                <tr>
-                  <td class="data__name">e-mail:</td>
-                  <td class="data__value">info@mimimishkashop.ru</td>
-                  <td class="data__name">адрес:</td>
-                  <td class="data__value">г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</td>
-                </tr>
-              </table>
+              <div class="contacts__data data">
+                <p class="data__name">e-mail:</p>
+                <p class="data__value">info@mimimishkashop.ru</p>
+                <p class="data__name">адрес:</p>
+                <p class="data__value">г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</p>
+              </div>
             </div>
-            <div class="contacts__map-wrapper">
+            <div class="contacts__for-desktop">
               <img class="contacts__map" src="#" width="322" height="457" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
-              <a class="contacts__write-us button" href="#">Напишите нам</a>
+              <div class="contacts__write-us">
+                <!-- без обертки в див не срабаотывает центровщик просто по классу ссылки, даже если displya: block; пишу ??? -->
+                <a class=" button" href="#">Напишите нам</a>
+              </div>
             </div>
           </section>
           <section class="social-copyright">
