--- a/source/index.html
+++ b/source/index.html
@@ -33,6 +33,11 @@
               </li>
             </ul>
           </div>
+          <ul class="proposal-list">
+            <li class="proposal-list__item"><a class="proposal-list__link proposal-list__link--hide" href="#">Новые поступления</a></li>
+            <li class="proposal-list__item"><a class="proposal-list__link proposal-list__link--hide" href="#">Распродажа</a></li>
+            <li class="proposal-list__item"><a class="proposal-list__link proposal-list__link--fontweight" href="#">Бесплатная доставка по России</a></li>
+          </ul>
         </nav>
       </div>
     </header>
@@ -90,10 +95,10 @@
                 <p class="comments__author">Анастасия Красильникова</p> <!-- cite -->
                 <p class="comments__author-link">@misssssiskras</p>
               </blockquote>
-              <p class="comments__toggles slider__toggles">
+              <div class="slider__toggles comments__toggles">
                 <button class="comments-toggle slider__prev" type="button">Предыдущий отзыв</button>
                 <button class="comments-toggle slider__next" type="button">Следующий отзыв</button>
-              </p>
+              </div>
               <a class="comments__add-comment button" href="#">Написать</a>
             </section>
           </div>
@@ -119,6 +124,9 @@
           </section>
           <section class="social-copyright">
             <div class="social-copyright__wrapper">
+              <a class="page-footer__logo" href="#">
+                <img class="page-footer__logo-image" src="#" width="102" height="34" alt="Мишка">
+              </a>
               <div class="social">
                 <ul class="social__list">
                   <li class="social__item">
