--- a/source/catalog.html
+++ b/source/catalog.html
@@ -32,6 +32,11 @@
               </li>
             </ul>
           </div>
+          <ul class="proposal-list">
+            <li class="proposal-list__item"><a class="proposal-list__link proposal-list__link--hide" href="#">Новые поступления</a></li>
+            <li class="proposal-list__item"><a class="proposal-list__link proposal-list__link--hide" href="#">Распродажа</a></li>
+            <li class="proposal-list__item"><a class="proposal-list__link proposal-list__link--fontweight" href="#">Бесплатная доставка по России</a></li>
+          </ul>
         </nav>
       </div>
     </header>
@@ -95,6 +100,9 @@
     <footer class="page-footer">
       <section class="social-copyright">
         <div class="social-copyright__wrapper">
+          <a class="page-footer__logo" href="#">
+            <img class="page-footer__logo-image" src="#" width="102" height="34" alt="Мишка">
+          </a>
           <div class="social">
             <ul class="social__list">
               <li class="social__item">
