--- a/source/form.html
+++ b/source/form.html
@@ -129,7 +129,7 @@
           </fieldset>
           <fieldset class="form__more more">
             <div class="more__wrap">
-              <lable for="more" class="more__title form__title">Доп</lable>
+              <label for="more" class="more__title form__title">Доп</label>
               <textarea class="more__info" id="more" rows="7" placeholder="Опишите все ваши пожелания к заказу"></textarea>
             </div>
           </fieldset>
